@@ -19,6 +19,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
@@ -48,7 +49,8 @@ class PhysicalDocumentBuilderTest extends AbstractSolrEnabledTest {
     void index_shouldFindDownloadResourceFilegroup() throws Exception {
         Path metPath = Paths.get("src/test/resources/METS/kleiuniv_PPN517154005/kleiuniv_download_resources.xml").toAbsolutePath();
         JDomXP xp = new JDomXP(JDomXP.readXmlFile(metPath.toAbsolutePath().toString()));
-        PhysicalDocumentBuilder builder = new PhysicalDocumentBuilder(List.of("DOWNLOAD_RESOURCE"), xp, null, null, DocType.DOWNLOAD_RESOURCE);
+        PhysicalDocumentBuilder builder = new PhysicalDocumentBuilder(List.of("DOWNLOAD_RESOURCE"), Collections.emptyList(), Collections.emptyMap(),
+                xp, null, null, DocType.DOWNLOAD_RESOURCE);
         Assertions.assertTrue(builder.isFileGroupExists());
     }
 
@@ -56,7 +58,8 @@ class PhysicalDocumentBuilderTest extends AbstractSolrEnabledTest {
     void index_shouldFindNoDownloadResourceFilegroup() throws Exception {
         Path metPath = Paths.get("src/test/resources/METS/kleiuniv_PPN517154005/kleiuniv_PPN517154005.xml").toAbsolutePath();
         JDomXP xp = new JDomXP(JDomXP.readXmlFile(metPath.toAbsolutePath().toString()));
-        PhysicalDocumentBuilder builder = new PhysicalDocumentBuilder(List.of("DOWNLOAD_RESOURCE"), xp, null, null, DocType.DOWNLOAD_RESOURCE);
+        PhysicalDocumentBuilder builder = new PhysicalDocumentBuilder(List.of("DOWNLOAD_RESOURCE"), Collections.emptyList(), Collections.emptyMap(),
+                xp, null, null, DocType.DOWNLOAD_RESOURCE);
         Assertions.assertFalse(builder.isFileGroupExists());
     }
 
